# statu_hub_server

./: .env  Cargo.toml  Dockerfile  README.md  client.ts  docker-compose.yml
.github/workflows/: docker-compose.yml  rust-ci.yml  tests.yml
src/: errors.rs  main.rs  route.rs
