[package]
name = "statu_hub_server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.2", features = ["cors"] }

thiserror = "2.0.12"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
mock = []




